--- a/index.html
+++ b/index.html
@@ -8826,7 +8826,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="נטע לילי [[האחיות כהן]]" title="$:/StoryList">
+<div list="לילי [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12867,7 +12867,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 וזו התמונה שמככבת באתר [[דובונאז' אלסטיק|http://coensisters.org/doobonage.html]].</pre>
 </div>
-<div created="20171219223133813" modified="20171228173308999" tags="[[מטא בדיון]]" title="לילי">
+<div created="20171219223133813" modified="20171230204637757" tags="[[מטא בדיון]]" title="לילי">
 <pre>[img[pictures/lily.jpg]]
 
 
@@ -12875,7 +12875,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 !!![[לילי]]:
 
-ביום הולדת שש שלי יצאתי מחדרי שבבית הורי ומעולם לא שבתי.
+סיפור בהמשכים (בקרוב מתחיל)
 
 
 
