לילי, לילי1, לילי 2, מתכונים טבעוניים

--- a/index.html
+++ b/index.html
@@ -671,6 +671,8 @@ Error message and password prompt
 
 <li>כריסטופר מולטיסנטי</li>
 
+<li>כריסמס 2017</li>
+
 <li>כשאמרו קסטה</li>
 
 <li>כשאנשים עוד היו אופטימים</li>
@@ -698,6 +700,10 @@ Error message and password prompt
 <li>ליל הדובונאז'</li>
 
 <li>לילי</li>
+
+<li>לילי 01</li>
+
+<li>לילי 02</li>
 
 <li>לפתן חבושים</li>
 
@@ -772,6 +778,8 @@ Error message and password prompt
 <li>משתדלים לא להגזים</li>
 
 <li>מתכוני ארוחת הכריסמס</li>
+
+<li>מתכונים טבעוניים</li>
 
 <li>נאמני הגנזך</li>
 
@@ -8814,10 +8822,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20171208164001944" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20180104165802193" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20171225144825634" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20180106170625828" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8826,7 +8834,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="לילי [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8846,7 +8854,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20171217222743198" title="$:/temp/search">
+<div created="20161023184814872" modified="20180105144807655" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9609,7 +9617,7 @@ well,
 בקיץ זו לא הייתה בעיה, וגם היו לי אופניים, אבל בחורף תמיד [[חלמתי|דעתניות]] שיש לי אוטו-תלת אופן, עם כיסוי בצורת מטריה ענקית שקופה.
 </pre>
 </div>
-<div created="20170402173414658" modified="20170404203744152" tags="[[מתכוני ארוחת הכריסמס]]" title="אורז לבן עם צנוברים">
+<div created="20170402173414658" modified="20180107121520116" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]]" title="אורז לבן עם צנוברים">
 <pre>[img[pictures/orez-lavan-matconim.jpg]]
 
 !!![[גורה]]:
@@ -9941,7 +9949,7 @@ well,
 את המתכון הזה [[איריס]] לימדה אותי עוד בימי [[הנחלה|הנחלה בה גדלתי]]. העבודה השקטה והמדודה, המחשבות על מה לפני ומה אחרי. חימום התנור. מראה של שוקולד מומס מתערבב לתוך קרם בהיר. בועות סירופ שמתרבות ומבהירות. בועות סירופ שמשחימות והופכות לקרמל. ביצים שמוקצפות עם סוכר והופכות לקצף עבה וזוהר. חומר שנמזג לתוך תבניות. עוגה גובהת בתנור. רחש סכין שננעצת בעוגה מוכנה ויוצאת יבשה.
 </pre>
 </div>
-<div created="20161112191527440" modified="20170709130529047" title="ארוחת כריסמס">
+<div created="20161112191527440" modified="20180104100454437" tags="[[חיות אוכל]]" title="ארוחת כריסמס">
 <pre>[img[pictures/aruchat-christmas.jpg]]
 
 
@@ -11847,7 +11855,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170411155118410" modified="20170412203304600" tags="[[מתכוני ארוחת הכריסמס]]" title="חזרת">
+<div created="20170411155118410" modified="20180107121603447" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]]" title="חזרת">
 <pre>[img[pictures/chazeret.jpg]]
 
 !!![[אנג'ליק]]:
@@ -11907,7 +11915,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 כשחם כדאי לשמור במקרר.
 </pre>
 </div>
-<div created="20170412203708355" modified="20170508145515892" tags="[[מתכוני ארוחת הכריסמס]]" title="חמוצים סיניים">
+<div created="20170412203708355" modified="20180107121640005" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]]" title="חמוצים סיניים">
 <pre>[img[pictures/chamoozim-sinim.jpg]]
 
 [[גואן יין]]:
@@ -12691,6 +12699,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
+<div created="20180101172047473" modified="20180107120526012" tags="[[חיות אוכל]]" title="כריסמס 2017">
+<pre>[img[pictures/christmas-2017.jpg]]
+
+!!![[גורה]]:
+
+לאחר שבכריסמס 2016 שחררנו את האחיות לחיק משפחותיהן הגרעיניות, קיימנו השנה שוב אצלנו את הארוחה שהייתה בסימן [[טבעונות|מתכונים טבעוניים]], לכבוד [[שראשל|ראשל]] הפכה טבעונית [[ונטע|נטע]] שהייתה אורחת כבוד. בצד המזרחי של השולחן היו המאכלים הבשריים, בצד המערבי הטבעוניים ובמרכז המאכלים הצמחוניים. היה מאד כיף, [[מרק]] ערבב לכולנו על הקרח וודקה סקנדינבית עם אוכמניות ושמפניה אייס וזה עבד. היו לא מעט מאכלים שאי אפשר בלתם [[מארוחת הכריסמס הקודמת|מתכוני ארוחת הכריסמס]], אבל גם היה פטה כבד ופרוסות קטנות מאד של לחם בריאות עם צימוקים. פוקצ'ות, חמאת שום, פטה טבעוני, אורז לבן, כרובית בטורטיות, תבשיל ירקות, סורבט, עוגת מוקה במהדורת כריסמס 2017, פנה-קוטה ומי יודע.. אכלנו כל כך הרבה.
+
+זו לא הייתה ארוחה דרמטית כמו קודמתה, היה סיכוי קלוש שדןדן יגיע עם דודו אבל זה לא קרה. לעומת זאת וסוף סוף אחרי שהתעלפו יחדיו על [[הסופרנוס]] ועוד [[סדרות]], קרתה תהפוכת, [[ויויו|יויו]] [[ואנג'ליק|אנג'ליק]] התאחדו! </pre>
+</div>
 <div created="20170512222504639" modified="20170514232358882" tags="פעם" title="כשאמרו קסטה">
 <pre>''
 אמרו טייפ''
@@ -12867,19 +12884,32 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 וזו התמונה שמככבת באתר [[דובונאז' אלסטיק|http://coensisters.org/doobonage.html]].</pre>
 </div>
-<div created="20171219223133813" modified="20171230204637757" tags="[[מטא בדיון]]" title="לילי">
+<div created="20171219223133813" modified="20180106170754957" tags="[[מטא בדיון]]" title="לילי">
 <pre>[img[pictures/lily.jpg]]
 
 
+
+//סיפור בהמשכים//
+
 &lt;&lt;list-links filter:&quot;[tag[לילי]]&quot;&gt;&gt;
 
-!!![[לילי]]:
 
-סיפור בהמשכים (בקרוב מתחיל)
 
 
 
 </pre>
+</div>
+<div created="20180101171912995" modified="20180103172103704" tags="לילי" title="לילי 01">
+<pre>[img[pictures/lily-1.jpg]]
+
+זה היה ב 21.12.2017
+
+יצאתי כמידי יום, לבושה ומצוידת ליום לימודים, המטפלת החדשה מלווה אותי. נכנסתי לחצר בית הספר, חיכיתי קצת, חזרתי לחצר הורי, ואספתי מהמחסן את התיק שהכנתי יום קודם.</pre>
+</div>
+<div created="20180105150125509" modified="20180106170930264" tags="לילי" title="לילי 02">
+<pre>[img[pictures/lily-2.jpg]]
+
+בתיק היו לי: 5 חטיפי אנרגיה, בקבוק מים, 2 חולצות ארוכות וחמות, 2 זוגות תחתונים, זוג מכנסי טרנינג, כלי רחצה, והרבה שטרות כסף שלקחתי ממכנסיו של אבי. הדרכון כבר היה עלי.</pre>
 </div>
 <div created="20170211163114823" modified="20170212133520340" title="לפתן חבושים">
 <pre>[img[pictures/KLL6V2vFdC26B5R4.jpg]]
@@ -12982,7 +13012,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 !!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, מאכילים את המצפון קלוריות ריקות.</pre>
 </div>
-<div created="20170402193858167" modified="20170404203721884" tags="[[מתכוני ארוחת הכריסמס]]" title="מג'דרה">
+<div created="20170402193858167" modified="20180107121735392" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]]" title="מג'דרה">
 <pre>[img[pictures/mejadra-matconim.jpg]]
 
 !!![[גורה]]:
@@ -13140,7 +13170,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170409072116141" modified="20170412203328914" tags="[[מתכוני ארוחת הכריסמס]]" title="מלפפונים חמוצים">
+<div created="20170409072116141" modified="20180107121759374" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]]" title="מלפפונים חמוצים">
 <pre>[img[pictures/melafefonim-chamuzim.jpg]]
 
 !!![[אלפרד]]:
@@ -13405,7 +13435,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 !!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, משתדלים לא להגזים עם חופש הביטוי.</pre>
 </div>
-<div created="20161114205035106" modified="20170425194308004" tags="[[מתכוני ארוחת הכריסמס]]" title="מתכוני ארוחת הכריסמס">
+<div created="20161114205035106" modified="20180107121447750" title="מתכוני ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
@@ -13416,6 +13446,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 ואגב דרך, [[יויו]] ו[[דןדן]], הכינו [[תיקי גב|תיקי גב לקניות שדןדן ויויו הכינו]]. הם מצויינים לקניות שקודמות להכנת האוכל.
 
 &lt;&lt;list-links filter:&quot;[tag[מתכוני ארוחת הכריסמס]]&quot;&gt;&gt;
+
+
+
+</pre>
+</div>
+<div created="20180107120555995" modified="20180107121441274" tags="[[חיות אוכל]]" title="מתכונים טבעוניים">
+<pre>[img[pictures/vegan.jpg]]
+
+חיות המשק המומות לטובה
+
+&lt;&lt;list-links filter:&quot;[tag[מתכונים טבעוניים]]&quot;&gt;&gt;
 
 
 
@@ -13637,7 +13678,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170407131936343" modified="20170412203443275" tags="[[מתכוני ארוחת הכריסמס]]" title="סלט חסה">
+<div created="20170407131936343" modified="20180107121835866" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]]" title="סלט חסה">
 <pre>[img[pictures/salat-chasa.jpg]]
 
 !!![[יויו]]:
@@ -13653,7 +13694,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 מוזגים מעל שמן זית (כמה כפות), חומץ תפוחים (כפית) ומלח גס (קורט), מערבבים עם כפות הידיים בעדינות מהצדדים פנימה ומגישים.
 </pre>
 </div>
-<div created="20170407140441796" modified="20170412203433359" tags="[[מתכוני ארוחת הכריסמס]]" title="סלט מלפפונים עם בצל סגול ושמיר">
+<div created="20170407140441796" modified="20180107122232677" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]]" title="סלט מלפפונים עם בצל סגול ושמיר">
 <pre>[img[pictures/salat-melafefonim.jpg]]
 
 !!![[יויו]]:
@@ -13664,7 +13705,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * בקערה קטנה מערבבים: רבע כוס שמן זית, כפית סוכר, כף חומץ, קורט מלח, קורט פלפל שחור ויוצקים מעל.
 * מערבבים מהחוץ לפנים ומגישים.</pre>
 </div>
-<div created="20170406150319861" modified="20170412203537645" tags="[[מתכוני ארוחת הכריסמס]]" title="סלט עגבניות עם שום">
+<div created="20170406150319861" modified="20180107122256468" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]]" title="סלט עגבניות עם שום">
 <pre>[img[pictures/salat-agvanyot.jpg]]
 
 !!![[אווה]]:
@@ -13676,7 +13717,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * מוסיפים כף-שתיים של מיץ לימון סחוט.
 * מערבבים ומגישים מיד או עד שעתיים מתום ההכנה.</pre>
 </div>
-<div created="20170405181303189" modified="20170406144931772" tags="[[מתכוני ארוחת הכריסמס]]" title="סלט עדשים עם כוסברה ובצל קצוץ">
+<div created="20170405181303189" modified="20180107122335592" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]]" title="סלט עדשים עם כוסברה ובצל קצוץ">
 <pre>[img[pictures/salat-adashim.jpg]]
 
 !!![[אווה]]:
@@ -13689,7 +13730,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * מתבלים בשמן זית, מיץ מחצי לימון ומלח ים גס.
 * אפשר להגיש מיד או מאוחר יותר או לאפסן במקרר ולשמור עד ארבעה ימים.</pre>
 </div>
-<div created="20161115212458524" modified="20170424215636713" tags="[[מתכוני ארוחת הכריסמס]]" title="סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום">
+<div created="20161115212458524" modified="20180107122407671" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]]" title="סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום">
 <pre>[img[pictures/salat-shorashim.jpg]]
 
 !!![[אנה]]:
@@ -13714,7 +13755,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170407122044551" modified="20170412203503274" tags="[[מתכוני ארוחת הכריסמס]]" title="סלק מבושל">
+<div created="20170407122044551" modified="20180107122201525" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]]" title="סלק מבושל">
 <pre>[img[pictures/selek.jpg]]
 
 !!![[אווה]]:
@@ -14107,7 +14148,7 @@ __אופן ההכנה:__
 
 !!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, הַכְּלַבְזִירִים עושים [[שלום|מאכילים את המצפון]].</pre>
 </div>
-<div created="20170414012036863" modified="20170424211626183" tags="[[מתכוני ארוחת הכריסמס]] [[המטבח על פי ז'נבייב]]" title="עיגולי מרציפן">
+<div created="20170414012036863" modified="20180107122115241" tags="[[מתכוני ארוחת הכריסמס]] [[המטבח על פי ז'נבייב]] [[מתכונים טבעוניים]]" title="עיגולי מרציפן">
 <pre>[img[pictures/marzipan.jpg]]
 
 
@@ -14744,7 +14785,7 @@ __אופן ההכנה____
 [[וזה|https://www.youtube.com/watch?v=WZd2SkydIXA]] מופע שיויו וגורה השתמשו בשמו [[ב-HH|HH]] בזמנו - [[קפה מילר]], כמחווה לרקדנית והכוריאוגרפית החשובה, פינה ז&quot;ל.
 </pre>
 </div>
-<div created="20170405154213420" modified="20170405180055892" tags="[[מתכוני ארוחת הכריסמס]]" title="פלפלים קלויים">
+<div created="20170405154213420" modified="20180107122033383" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]]" title="פלפלים קלויים">
 <pre>[img[pictures/pilpelim.jpg]]
 
 !!![[אווה]]:
@@ -15712,18 +15753,24 @@ Fapina''
 
 &lt;&lt;list-links filter:&quot;[tag[שרלה לא הייתה אוהבת את זה]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20170408234445334" modified="20170412203404261" tags="[[מתכוני ארוחת הכריסמס]]" title="תבשיל שורשים ואורז בשלושה צבעים">
+<div created="20170408234445334" modified="20180107121956676" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]]" title="תבשיל שורשים ואורז בשלושה צבעים">
 <pre>[img[pictures/orez-bishlosha.jpg]]
 
 !!![[אלפרד]]:
 
 * משרים כוס אורז בשלושה צבעים לשעתיים לפחות.
 (יש חבילות עם שלושתם - או לפי משקל: אורז עגול, אורז אדום ואורז בר).
+
 * מסננים את האורז, קוצצים בצל, קולפים בטטה ושני גזרים.
+
 * בסיר רחב יחסית, מתחילים לטגן את הבצל בתוך שתי כפות שמן עד להזהבה.
+
 * מכניסים פנימה את הבטטה והגזרים וצולים עוד.
+
 * מוסיפים את האורז ומטגנים עוד מעט.
+
 * מוסיפים שתי כוסות מים ןמתבלים במלח, פלפל שחור, כף חומץ רימונים, כף-שתיים סויה, כף טריאקי, מעט בהרט.
+
 * מבשלים על אש נמוכה ובודקים מידי פעם את מצב המים - מוסיפים רקלגובה האורז ולא יותר עד עשרים דקות לפני הסוף ובעשרים הדקות האחרונות מבשלים עד שהמים מתכלים.
 
 </pre>
