--- a/tiddlywiki.html
+++ b/tiddlywiki.html
@@ -369,7 +369,7 @@ Error message and password prompt
 
 <li>בחוות החיות</li>
 
-<li>ביג לובובסקי</li>
+<li>ביג לבובסקי</li>
 
 <li>ביורק</li>
 
@@ -697,6 +697,8 @@ Error message and password prompt
 
 <li>ליל הדובונאז'</li>
 
+<li>לילי</li>
+
 <li>לפתן חבושים</li>
 
 <li>לצייר גרפיטי וירטואלי במִיצְפֶּרֶש</li>
@@ -775,6 +777,8 @@ Error message and password prompt
 
 <li>נדיה</li>
 
+<li>נטע</li>
+
 <li>נסענו לאזכרה של אימא</li>
 
 <li>נשמה</li>
@@ -790,6 +794,8 @@ Error message and password prompt
 <li>סוניה</li>
 
 <li>סוסים לדבק</li>
+
+<li>סטיב בושמי</li>
 
 <li>סטלין</li>
 
@@ -8808,10 +8814,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20171218162146784" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20171208164001944" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20171218162149792" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20171225144825634" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8820,7 +8826,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="אפייה [[אני מחנה]] [[ג'ון גודמן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="לילי [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9629,7 +9635,7 @@ well,
 
 &lt;&lt;list-links filter:&quot;[tag[אחות כהן]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20170415105721479" modified="20170918164216958" tags="[[קופים ממונעים]]" title="אחיות חוץ">
+<div created="20170415105721479" modified="20171219223225453" tags="[[קופים ממונעים]]" title="אחיות חוץ">
 <pre>[img[pictures/ahayot-huz.jpg]]
 
 !!![[גורה]]:
@@ -9793,14 +9799,14 @@ well,
 
 איריס בתה של [[אווה]], והיא ילדה זרחנית. זורחת באור ובחושך.</pre>
 </div>
-<div created="20170415200315789" modified="20171212171828620" tags="[[אחיות חוץ]]" title="איתן וג'ואל כהן">
+<div created="20170415200315789" modified="20171225144702602" tags="[[אחיות חוץ]]" title="איתן וג'ואל כהן">
 <pre>[img[pictures/cohen-brothers.jpg]]
 
 !!![[גורה]]:
 
   [[האחים איתן וג'ואל כהן|https://he.wikipedia.org/wiki/%D7%94%D7%90%D7%97%D7%99%D7%9D_%D7%9B%D7%94%D7%9F]], שיויו אימץ בתחילת שנות האלפיים, והפך אותם לאחיו, ואת עצמו [[לאווה כהן|אווה]], אחותם - שהיא קונדיטורית הונגריה, היו [[ראשית האחיות|המעבדה]].
 
-הוא לגמרי לא [[היחידי שמת עליהם|פארגו]] ועל [[הראש הנפלא שלהם|ביג לובובסקי]].
+הוא לגמרי לא [[היחידי שמת עליהם|פארגו]] ועל [[הראש הנפלא שלהם|ביג לבובסקי]].
 
 
 
@@ -9925,14 +9931,14 @@ well,
 מוסיפים פנימה את צרור האספרגוס וצולים כמה דקות.
 * בוזקים מלח ים גס, מערבבים בקלות, ומגישים. (אפשר גם לאכול במהלך היום או לשמור במקרר יומיים).</pre>
 </div>
-<div created="20171216194951924" modified="20171218160958931" tags="[[כשהם ישנים]]" title="אפייה">
+<div created="20171216194951924" modified="20171217212605229" tags="[[כשהם ישנים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה]]:
 
 עכשיו זה הזמן הטוב ביותר לאפייה, כי האוויר קר והקונדיטוריה אוהבת קור וגם אני. התעוררתי הבקר ערוכה נפשית ותכנונית. תוך כדי הכנת הקפה התחלתי למדוד את החומרים, ולערבל את הבצק שאחר כך יתפח שלוש שעות לפחות במקרר. בצק השמרים של [[הקרנץ|שמרים קרנץ]] ממשיך לתפוח במתינות הרצויה גם מחוץ למקרר. לא צריך למהר לרדד. כמעט ולא צריך לקמח את המשטח עליו מרדדים. מלית החמאה-שוקו לא רכה מידי, וגם הרידוד שלאחר הקיפול הוא תענוג, שלא לדבר על קליעת הצמות. 
 
-את המתכון הזה ועוד [[איריס]] לימדה אותי עוד בימי [[הנחלה|הנחלה בה גדלתי]]. העבודה השקטה והמדודה, המחשבות על מה לפני ומה אחרי. חימום התנור. מראה של שוקולד מומס מתערבב לתוך קרם בהיר. בועות סירופ שמתרבות ומבהירות. בועות סירופ שמשחימות והופכות לקרמל. ביצים שמוקצפות עם סוכר והופכות לקצף עבה וזוהר. חומר שנמזג לתוך תבניות. עוגה גובהת בתנור. רחש סכין שננעצת בעוגה מוכנה ויוצאת יבשה.
+את המתכון הזה [[איריס]] לימדה אותי עוד בימי [[הנחלה|הנחלה בה גדלתי]]. העבודה השקטה והמדודה, המחשבות על מה לפני ומה אחרי. חימום התנור. מראה של שוקולד מומס מתערבב לתוך קרם בהיר. בועות סירופ שמתרבות ומבהירות. בועות סירופ שמשחימות והופכות לקרמל. ביצים שמוקצפות עם סוכר והופכות לקצף עבה וזוהר. חומר שנמזג לתוך תבניות. עוגה גובהת בתנור. רחש סכין שננעצת בעוגה מוכנה ויוצאת יבשה.
 </pre>
 </div>
 <div created="20161112191527440" modified="20170709130529047" title="ארוחת כריסמס">
@@ -10064,12 +10070,12 @@ well,
 
 </pre>
 </div>
-<div created="20171212171900725" modified="20171217145619241" title="ביג לובובסקי">
+<div created="20171212171900725" modified="20171225144633679" title="ביג לבובסקי">
 <pre>[img[pictures/the-big-lebowski.jpg]]
 
 !!![[יויו]]:
 
-אני מת על [[האחים כהן|איתן וג'ואל כהן]], אבל[[ ביג לובובסקי|http://www.imdb.com/title/tt0118715/]] מבחינתי הוא אבן דרך, ואני מרגיש [[דודיסט|https://www.youtube.com/watch?v=92EChuYNV-M]]. זה מאד עצוב [[שדוני|http://www.imdb.com/title/tt0118715/characters/nm0000114?ref_=tt_cl_t4]] מת בסוף, ואז [[הדוד|ג'ף ברידג'ס]]  [[ווולטר|ג'ון גודמן]] הולכים לפזר את האפר שלו.
+אני מת על [[האחים כהן|איתן וג'ואל כהן]], אבל[[ ביג לובובסקי|http://www.imdb.com/title/tt0118715/]] מבחינתי הוא אבן דרך, ואני מרגיש [[דודיסט|https://www.youtube.com/watch?v=92EChuYNV-M]]. זה מאד עצוב [[שדוני|סטיב בושמי]] מת בסוף, ואז [[הדוד|ג'ף ברידג'ס]]  [[ווולטר|ג'ון גודמן]] הולכים לפזר את האפר שלו.
 </pre>
 </div>
 <div created="20170623150317093" modified="20170815164432646" tags="[[אחיות חוץ]]" title="ביורק">
@@ -10198,14 +10204,14 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20171216174635678" modified="20171218164936725" tags="[[אחיות חוץ]]" title="ג'ון גודמן">
+<div created="20171216174635678" modified="20171225144805289" tags="[[אחיות חוץ]]" title="ג'ון גודמן">
 <pre>[img[pictures/john-goodman.jpg]]
 
 !!![[יויו]]:
 
-אם תגידו לי [[ג'ון גודמן|http://www.imdb.com/name/nm0000422/]], גם כשאני בשיא הדכדוך זה ישמח אותי ואני אחייך ואזכר בחיוך המתוק הטוב [[והמצחיק|. 
+אם תגידו לי [[ג'ון גודמן|http://www.imdb.com/name/nm0000422/]], גם כשאני בשיא הדכדוך זה ישמח אותי ואני אחייך ואזכר בחיוך המתוק הטוב והמצחיק. 
 
-[[דן קונר|http://www.imdb.com/title/tt0094540/characters/nm0000422?ref_=tt_cl_t2]] בעלה של [[רוזאן|http://www.imdb.com/title/tt0094540/?ref_=nmbio_mbio]],  [[וולטר סובצ'אק|http://www.imdb.com/title/tt0118715/characters/nm0000422?ref_=tt_cl_t2]] [[מביג לובובסקי|ביג לובובסקי]], [[פרד פלינסטון|http://www.imdb.com/title/tt0109813/characters/nm0000422?ref_=tt_cl_t1]]  ועוד [[סופר דמויות בלתי נשכחות|https://www.youtube.com/watch?v=IZocpwWLsyE]]. </pre>
+[[דן קונר|http://www.imdb.com/title/tt0094540/characters/nm0000422?ref_=tt_cl_t2]] בעלה של [[רוזאן|http://www.imdb.com/title/tt0094540/?ref_=nmbio_mbio]],  [[וולטר סובצ'אק|http://www.imdb.com/title/tt0118715/characters/nm0000422?ref_=tt_cl_t2]] [[מביג לבובסקי|ביג לבובסקי]], [[פרד פלינסטון|http://www.imdb.com/title/tt0109813/characters/nm0000422?ref_=tt_cl_t1]]  ועוד דמויות סופר אהובות ובלתי נשכחות.</pre>
 </div>
 <div created="20170323221312884" modified="20170703134352456" tags="[[אחות כהן]]" title="ג'ונג">
 <pre>[img[pictures/jong.jpg]]
@@ -12861,6 +12867,21 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 וזו התמונה שמככבת באתר [[דובונאז' אלסטיק|http://coensisters.org/doobonage.html]].</pre>
 </div>
+<div created="20171219223133813" modified="20180106170536465" tags="[[מטא בדיון]]" title="לילי">
+<pre>[img[pictures/lily.jpg]]
+
+
+
+
+
+סיפור בהמשכים
+
+&lt;&lt;list-links filter:&quot;[tag[לילי]]&quot;&gt;&gt;
+
+
+
+</pre>
+</div>
 <div created="20170211163114823" modified="20170212133520340" title="לפתן חבושים">
 <pre>[img[pictures/KLL6V2vFdC26B5R4.jpg]]
 
@@ -13422,6 +13443,27 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 האחות הבכורה והביולוגית של גורה ושלי.</pre>
 </div>
+<div created="20171219203307613" modified="20171226151035506" tags="[[סיפורים אמיתיים]]" title="נטע">
+<pre>[img[pictures/neta.jpg]]
+
+!!![[יויו]]:
+
+עד כה לא הזכרתי את נטע, חברתי הטובה מבית הספר היסודי. ההורים שלנו היו מיודדים ולמדנו באותה הכיתה. בשנים בהן בנים ובנות לא כל כך מדברים דיברנו פחות אך היינו חברים. אהבנו לטייל יחד בשדות.
+
+נטע היא גבוהה ויפה עם עיניים ירוקות אפורות ושתקנית. היום קוראים לזה [[אספרגר|כישורים חברתיים]]. הייתי מאוהב בה בתיכון תקופה, אבל ההתאהבויות אף פעם לא היו נהירות לי.
+
+אחרי הצבא היא נסעה לניו זילנד, גרה שם כמה שנים, התחתנה, נולד לה בן, כשהבן היה בן 4 הוא נפטר. היא התגרשה והסתובבה בעולם.
+
+לפני שבועיים קיבלתי ממנה מייל, בו כתבה שדיברה עם אבי ושהיא תהיה בפריז - אם בא לי להיפגש.
+
+בטח שבא לי!!!
+
+היא אצלנו עכשיו והיא מקסימה והיא סיפרה לנו על [[לילי]].
+
+
+
+</pre>
+</div>
 <div created="20171026185459428" modified="20171101162716404" tags="[[משפחת באומן]]" title="נסענו לאזכרה של אימא">
 <pre>[img[pictures/haazkara-shel-ima.jpg]] 
 
@@ -13535,6 +13577,22 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 <pre>[img[pictures/soosim-ledevek.jpg]]
 
 !!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, כשהסוסים הופכים חסרי תועלת, החזירים והכלבים שולחים אותם  לבית החרושת לדבק.''
+
+</pre>
+</div>
+<div created="20171219115813335" modified="20171220202601471" tags="[[אחיות חוץ]]" title="סטיב בושמי">
+<pre>[img[pictures/steve-buscemi.jpg]]
+
+!!![[יויו]]:
+
+הדבר שהפתיע אותי ביותר לגבי [[סטיב בושמי|http://m.imdb.com/name/nm0000114/?ref_=m_nmfm_nm]] הוא, שהוא ממש &quot;חוטא&quot; [[בבימוי|http://m.imdb.com/name/nm0000114/filmotype/director?ref_=m_nmfm_2]]  של  סרטים ופרקים של סדרות.
+
+הוא אחד השחקנים שאני הכי אוהב בכל לבי, והוא נשמה ואחות.
+
+הוא נולד ביום שישי ה-13 של דצמבר 1957, הוא היה כבאי במחלקת איטליה הקטנה של עיריית ניו יורק 4 שנים. הוא שיחק ב 157 סרטים, הוא הפיק 11 סרטים. הוא בפס הקול של שמונה סרטים, הוא כתב שלושה תסריטים, הוא שיחק ב 11 סרטים של [[אדם סנדלר|https://www.cinemablend.com/new/Quiz-Guess-Adam-Sandler-Movie-By-Steve-Buscemi-Character-70254.html]], שישה סרטים של [[האחים כהן|https://en.wikipedia.org/wiki/List_of_frequent_Coen_Brothers_collaborators]]. הוא היה מופתע כשהוצע לו התפקיד הראשי [[באימפריית הפשע|http://www.imdb.com/title/tt0979432/]] עליו זכה [[בגלובוס הזהב|https://www.youtube.com/watch?v=OGFJ6G7UmD8]]. הוא [[מת ב 20 סרטים|http://www.imdb.com/list/ls000805145/]], כולל את [[הסופרנוס]] אבל הוא הכי אהב למות [[בביג לובובסקי|https://www.youtube.com/watch?v=CWtby5WqHdM]] כולל סיבת המוות.
+
+אתם יכולים לקרוא [[פרטי טריוויה נוספים|http://m.imdb.com/name/nm0000114/trivia?ref_=m_nm_dyk_trv]] אודות האיש. [[הנה|https://www.youtube.com/watch?v=BqVrpFXXdB0]] ראיון משעשע כבונוס, ושיהיה סטיב המתוק חזק בריא ושמח.
+
 
 </pre>
 </div>
