--- a/index.html
+++ b/index.html
@@ -8825,7 +8825,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20180104165802193" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20180106170625828" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20180107124732764" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8834,7 +8834,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כריסמס 2017]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8854,7 +8854,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180105144807655" title="$:/temp/search">
+<div created="20161023184814872" modified="20180107124725494" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12109,7 +12109,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 לפעמים אני שואל את עצמי, האם יש לך [[פלס|https://he.wikipedia.org/wiki/%D7%A4%D7%9C%D7%A1_%D7%91%D7%A0%D7%90%D7%99%D7%9D]] במקום של [[העין השלישית|https://he.wikipedia.org/wiki/%D7%94%D7%A2%D7%99%D7%9F_%D7%94%D7%A9%D7%9C%D7%99%D7%A9%D7%99%D7%AA]] או שזו [[הפרעה כפייתית טורדנית?|https://he.wikipedia.org/wiki/%D7%94%D7%A4%D7%A8%D7%A2%D7%94_%D7%98%D7%95%D7%A8%D7%93%D7%A0%D7%99%D7%AA-%D7%9B%D7%A4%D7%99%D7%99%D7%AA%D7%99%D7%AA]] זה לא רק שאני צריך ליישר כל דבר כל הזמן, ושהדברים יהיו בזווית שאני רוצה. אני כמעט כל הזמן מתכנן, אני כמעט כל הזמן [[מזנפלץ|מיזונפלציה]], אני מוטרד מדברים שאמרתי או לא אמרתי. קו דק עובר בין פרפקציוניזם ל-ocd.</pre>
 </div>
-<div created="20170422205250692" modified="20170625163439585" tags="[[המטבח על פי ז'נבייב]]" title="ירקות קלויים">
+<div created="20170422205250692" modified="20180107124340900" tags="[[המטבח על פי ז'נבייב]] [[מתכונים טבעוניים]]" title="ירקות קלויים">
 <pre>[img[pictures/yerakot-klooim.jpg]]
 
 !!![[ז'נבייב]]:
@@ -12664,7 +12664,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 תשובה ראשונה בסיסית היא: &quot;אני אחשוב על זה&quot;. משפט שבתקופה של שיפוץ הדירה, הפך למטבע לשון אצלנו.</pre>
 </div>
-<div created="20170621135717036" modified="20170621235846699" tags="[[חיות אוכל]]" title="כרובית במחבת">
+<div created="20170621135717036" modified="20180107124257583" tags="[[חיות אוכל]] [[מתכונים טבעוניים]]" title="כרובית במחבת">
 <pre>[img[pictures/kruvit-bamachvat.jpg]]
 
 !!![[יויו]]:
@@ -12699,12 +12699,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180101172047473" modified="20180107120526012" tags="[[חיות אוכל]]" title="כריסמס 2017">
+<div created="20180101172047473" modified="20180107124728970" tags="[[חיות אוכל]]" title="כריסמס 2017">
 <pre>[img[pictures/christmas-2017.jpg]]
 
 !!![[גורה]]:
 
-לאחר שבכריסמס 2016 שחררנו את האחיות לחיק משפחותיהן הגרעיניות, קיימנו השנה שוב אצלנו את הארוחה שהייתה בסימן [[טבעונות|מתכונים טבעוניים]], לכבוד [[שראשל|ראשל]] הפכה טבעונית [[ונטע|נטע]] שהייתה אורחת כבוד. בצד המזרחי של השולחן היו המאכלים הבשריים, בצד המערבי הטבעוניים ובמרכז המאכלים הצמחוניים. היה מאד כיף, [[מרק]] ערבב לכולנו על הקרח וודקה סקנדינבית עם אוכמניות ושמפניה אייס וזה עבד. היו לא מעט מאכלים שאי אפשר בלתם [[מארוחת הכריסמס הקודמת|מתכוני ארוחת הכריסמס]], אבל גם היה פטה כבד ופרוסות קטנות מאד של לחם בריאות עם צימוקים. פוקצ'ות, חמאת שום, פטה טבעוני, אורז לבן, כרובית בטורטיות, תבשיל ירקות, סורבט, עוגת מוקה במהדורת כריסמס 2017, פנה-קוטה ומי יודע.. אכלנו כל כך הרבה.
+לאחר שבכריסמס 2016 שחררנו את האחיות לחיק משפחותיהן הגרעיניות, קיימנו השנה שוב [[אצלנו|כוכב המשאלות 01]] את הארוחה שהייתה בסימן [[טבעונות|מתכונים טבעוניים]], לכבוד [[שראשל|ראשל]] הפכה טבעונית [[ונטע|נטע]] שהייתה אורחת כבוד. בצד המזרחי של השולחן היו המאכלים הבשריים, בצד המערבי הטבעוניים ובמרכז המאכלים הצמחוניים. היה מאד כיף, [[מרק]] ערבב לכולנו על הקרח וודקה סקנדינבית עם אוכמניות ושמפניה אייס וזה עבד. היו לא מעט מאכלים שאי אפשר בלתם [[מארוחת הכריסמס הקודמת|מתכוני ארוחת הכריסמס]], אבל גם היה פטה כבד ופרוסות קטנות מאד של לחם בריאות עם צימוקים. פוקצ'ות, [[חמאת שום|חמאת שום ועשבי תיבול]], פטה טבעוני, אורז לבן, כרובית בטורטיות, תבשיל ירקות, סורבט, עוגת מוקה במהדורת כריסמס 2017, פנה-קוטה ומי יודע.. אכלנו כל כך הרבה.
 
 זו לא הייתה ארוחה דרמטית כמו קודמתה, היה סיכוי קלוש שדןדן יגיע עם דודו אבל זה לא קרה. לעומת זאת וסוף סוף אחרי שהתעלפו יחדיו על [[הסופרנוס]] ועוד [[סדרות]], קרתה תהפוכת, [[ויויו|יויו]] [[ואנג'ליק|אנג'ליק]] התאחדו! </pre>
 </div>
@@ -15507,7 +15507,7 @@ Fapina''
 [img[pictures/qJoUOLqvuzPjy1Pr.jpg]]
 </pre>
 </div>
-<div created="20170717183951845" modified="20170718151532476" tags="[[כשהם ישנים]]" title="שותה עם גורה">
+<div created="20170717183951845" modified="20180107124443467" tags="[[כשהם ישנים]] [[מתכונים טבעוניים]]" title="שותה עם גורה">
 <pre>[img[pictures/miz-anavim.jpg]]
 
 !!![[אווה]]:
