--- a/index.html
+++ b/index.html
@@ -705,6 +705,8 @@ Error message and password prompt
 
 <li>לילי 02</li>
 
+<li>לילי 03</li>
+
 <li>לפתן חבושים</li>
 
 <li>לצייר גרפיטי וירטואלי במִיצְפֶּרֶש</li>
@@ -8834,7 +8836,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כריסמס 2017]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[לילי 03]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12910,6 +12912,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 <pre>[img[pictures/lily-2.jpg]]
 
 בתיק היו לי: 5 חטיפי אנרגיה, בקבוק מים, 2 חולצות ארוכות וחמות, 2 זוגות תחתונים, זוג מכנסי טרנינג, כלי רחצה, והרבה שטרות כסף שלקחתי ממכנסיו של אבי. הדרכון כבר היה עלי.</pre>
+</div>
+<div created="20180107133148881" modified="20180107133240428" tags="לילי" title="לילי 03">
+<pre>
+[img[pictures/lily-3.jpg]]
+
+כל ארבעת הכיסים של המכנסיים של אבא שלי היו תמיד תפוחים מחבילות של שטרות כסף בצבעים שונים, ותמיד הוא היה תולה אותם בכניסה לחדר האמבטיה.</pre>
 </div>
 <div created="20170211163114823" modified="20170212133520340" title="לפתן חבושים">
 <pre>[img[pictures/KLL6V2vFdC26B5R4.jpg]]
