--- a/index.html
+++ b/index.html
@@ -8836,7 +8836,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[לילי 03]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="לילי [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12886,7 +12886,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 וזו התמונה שמככבת באתר [[דובונאז' אלסטיק|http://coensisters.org/doobonage.html]].</pre>
 </div>
-<div created="20171219223133813" modified="20180106170754957" tags="[[מטא בדיון]]" title="לילי">
+<div created="20171219223133813" modified="20180107133849410" tags="[[מטא בדיון]]" title="לילי">
 <pre>[img[pictures/lily.jpg]]
 
 
@@ -12914,8 +12914,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 בתיק היו לי: 5 חטיפי אנרגיה, בקבוק מים, 2 חולצות ארוכות וחמות, 2 זוגות תחתונים, זוג מכנסי טרנינג, כלי רחצה, והרבה שטרות כסף שלקחתי ממכנסיו של אבי. הדרכון כבר היה עלי.</pre>
 </div>
 <div created="20180107133148881" modified="20180107133240428" tags="לילי" title="לילי 03">
-<pre>
-[img[pictures/lily-3.jpg]]
+<pre>[img[pictures/lily-3.jpg]]
 
 כל ארבעת הכיסים של המכנסיים של אבא שלי היו תמיד תפוחים מחבילות של שטרות כסף בצבעים שונים, ותמיד הוא היה תולה אותם בכניסה לחדר האמבטיה.</pre>
 </div>
