--- a/index.html
+++ b/index.html
@@ -8836,7 +8836,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="לילי [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[דיוויד צ'ייס]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8856,7 +8856,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180107124725494" title="$:/temp/search">
+<div created="20161023184814872" modified="20180107151232747" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11020,7 +11020,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20170829174937405" modified="20171114134637553" tags="[[אחיות חוץ]] הסופרנוס" title="דיוויד צ'ייס">
+<div created="20170829174937405" modified="20180107151613816" tags="[[אחיות חוץ]] הסופרנוס" title="דיוויד צ'ייס">
 <pre>[img[pictures/david-chase.jpg]]
 
 !!![[יויו]]:
@@ -11036,7 +11036,7 @@ different tastes, but there were things we both love: family, work, people in al
 
 וכן, תודות [[לאנג'ליק|אנג'ליק]], כולנו נדבקנו,  ובאיחור של כמה שנים טובות, בחיידק הסופרנוס. [[גורה]] מידי כמה ימים מנסה שוב לצייר את פניו, (כמו שהיא מנסה לצייר שוב עוד פנים). היא עדיין לא באמת מצליחה, אבל: &quot;לפחות שיראו כמה הוא טוב לב וחכם וחייכן מבפנים. שיראו את שרירי החיוך המפותחים שלו&quot;, היא אומרת. רק לאחרונה הבנתי, [[שדייויד צ'ייס|http://www.imdb.com/name/nm0153740/]], שיצר את [[הסופרנוס]], הוא אותו דייויד צ'ייס של [[חשיפה לצפון|חשיפה לצפון]]. תמיד הרגשתי בבית [[בסיסלי, אלסקה|http://northernexposure.wikia.com/wiki/Cicely,_Alaska]]. בסופרנוס, לבי יצא אליו, ואני אוהבת אותו [[כאחות|האחיות כהן]]
 
- אני ממליץ על [[ראיון|https://www.youtube.com/watch?v=_7jgaAfWS64]] מרתק בעיני, בו [[פיטר בוגדנוביץ'|http://www.imdb.com/name/nm0000953/]], שהיה [[הפסיכולוג|http://www.imdb.com/character/ch0050337/?ref_=ttfc_fc_cl_t39]] של [[הפסיכולוגית|http://www.imdb.com/character/ch0011335/?ref_=ttfc_fc_cl_t2]] של [[טוני סופרנו]], הוא המראיין.
+ אני ממליץ על [[ראיון|https://www.youtube.com/watch?v=_7jgaAfWS64]] מרתק בעיני, בו [[פיטר בוגדנוביץ'|http://www.imdb.com/name/nm0000953/]], שהיה הפסיכולוג של [[הפסיכולוגית|http://www.imdb.com/title/tt0141842/characters/nm0000966?ref_=tt_cl_t2]] של [[טוני סופרנו]], הוא המראיין.
 
 </pre>
 </div>
