--- a/index.html
+++ b/index.html
@@ -433,6 +433,8 @@ Error message and password prompt
 
 <li>גיגי</li>
 
+<li>גלגולים</li>
+
 <li>גלות</li>
 
 <li>גלי זחל</li>
@@ -707,6 +709,10 @@ Error message and password prompt
 
 <li>לילי 03</li>
 
+<li>לילי 04</li>
+
+<li>לילי 05</li>
+
 <li>לפתן חבושים</li>
 
 <li>לצייר גרפיטי וירטואלי במִיצְפֶּרֶש</li>
@@ -968,6 +974,8 @@ Error message and password prompt
 <li>שרלה לא הייתה אוהבת את זה</li>
 
 <li>תבשיל שורשים ואורז בשלושה צבעים</li>
+
+<li>תהפוכת</li>
 
 <li>תומר</li>
 
@@ -8827,7 +8835,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20180104165802193" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20180107124732764" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20180111161040502" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8836,7 +8844,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[דיוויד צ'ייס]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="גלגולים [[לילי 05]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8856,7 +8864,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180107151232747" title="$:/temp/search">
+<div created="20161023184814872" modified="20180112092301896" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10889,6 +10897,19 @@ Is where I want to be
 
 </pre>
 </div>
+<div created="20180109154156686" modified="20180114152913897" tags="[[אירי טוענת]]" title="גלגולים">
+<pre>[img[pictures/gilgulim.jpg]]
+
+!!![[רוז'ה]]:
+
+כמו שאני דמיינתי את זה, גלגול נשמות זה כמו מדיטציית פתיחת צ'קרות או כמו משחק מחשב, זאת אומרת שאתה מתחיל מלמטה, קרוב לאדמה - נשמה חדשה שחוזרת ומתגלגלת כאן על הכדור צעד ועוד צעד עד שהיא יכולה כבר &quot;לשבור את תקרת הזכוכית&quot;. לא חשבתי מעבר לזה. 
+
+[[אירי טוענת]], שהכדור הזה הוא [[גלות]] לנשמות שבאות מכל מיני כדורים מכל מיני גלקסיות ומרחקים באינסוף.
+
+[[יויו]] חושב, [[שגם בין הגלגולים|נשמה]] וחגורות המרחק יש היררכיה וטוב ורע ושאתמול מלאו שנתיים לנסיקתו מכאן של [[דיוויד בואי]].
+
+</pre>
+</div>
 <div created="20170105170620001" modified="20170817163510513" tags="[[אירי טוענת]] [[קופים ממונעים]]" title="גלות">
 <pre>[img[pictures/galoot.jpg]]
 
@@ -12701,14 +12722,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180101172047473" modified="20180107124728970" tags="[[חיות אוכל]]" title="כריסמס 2017">
+<div created="20180101172047473" modified="20180107163911863" tags="[[חיות אוכל]]" title="כריסמס 2017">
 <pre>[img[pictures/christmas-2017.jpg]]
 
 !!![[גורה]]:
 
 לאחר שבכריסמס 2016 שחררנו את האחיות לחיק משפחותיהן הגרעיניות, קיימנו השנה שוב [[אצלנו|כוכב המשאלות 01]] את הארוחה שהייתה בסימן [[טבעונות|מתכונים טבעוניים]], לכבוד [[שראשל|ראשל]] הפכה טבעונית [[ונטע|נטע]] שהייתה אורחת כבוד. בצד המזרחי של השולחן היו המאכלים הבשריים, בצד המערבי הטבעוניים ובמרכז המאכלים הצמחוניים. היה מאד כיף, [[מרק]] ערבב לכולנו על הקרח וודקה סקנדינבית עם אוכמניות ושמפניה אייס וזה עבד. היו לא מעט מאכלים שאי אפשר בלתם [[מארוחת הכריסמס הקודמת|מתכוני ארוחת הכריסמס]], אבל גם היה פטה כבד ופרוסות קטנות מאד של לחם בריאות עם צימוקים. פוקצ'ות, [[חמאת שום|חמאת שום ועשבי תיבול]], פטה טבעוני, אורז לבן, כרובית בטורטיות, תבשיל ירקות, סורבט, עוגת מוקה במהדורת כריסמס 2017, פנה-קוטה ומי יודע.. אכלנו כל כך הרבה.
 
-זו לא הייתה ארוחה דרמטית כמו קודמתה, היה סיכוי קלוש שדןדן יגיע עם דודו אבל זה לא קרה. לעומת זאת וסוף סוף אחרי שהתעלפו יחדיו על [[הסופרנוס]] ועוד [[סדרות]], קרתה תהפוכת, [[ויויו|יויו]] [[ואנג'ליק|אנג'ליק]] התאחדו! </pre>
+זו לא הייתה ארוחה דרמטית כמו קודמתה, היה סיכוי קלוש שדןדן יגיע עם דודו אבל זה לא קרה. לעומת זאת וסוף סוף אחרי שהתעלפו יחדיו על [[הסופרנוס]] ועוד [[סדרות]], [[יויו]] סיפר לנו שקרתה [[תהפוכת]], והוא [[ואנג'ליק|אנג'ליק]] התאחדו. כולנו שמחנו למרות שכולנו די כבר שמנו לב.</pre>
 </div>
 <div created="20170512222504639" modified="20170514232358882" tags="פעם" title="כשאמרו קסטה">
 <pre>''
@@ -12886,12 +12907,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 וזו התמונה שמככבת באתר [[דובונאז' אלסטיק|http://coensisters.org/doobonage.html]].</pre>
 </div>
-<div created="20171219223133813" modified="20180107133849410" tags="[[מטא בדיון]]" title="לילי">
+<div created="20171219223133813" modified="20180112171613823" tags="[[מטא בדיון]]" title="לילי">
 <pre>[img[pictures/lily.jpg]]
 
 
 
 //סיפור בהמשכים//
+
+ביום הולדת שש שלי יצאתי מבית הורי ויותר לא חזרתי.
 
 &lt;&lt;list-links filter:&quot;[tag[לילי]]&quot;&gt;&gt;
 
@@ -12901,14 +12924,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180101171912995" modified="20180103172103704" tags="לילי" title="לילי 01">
+<div created="20180101171912995" modified="20180112094204397" tags="לילי" title="לילי 01">
 <pre>[img[pictures/lily-1.jpg]]
 
 זה היה ב 21.12.2017
 
-יצאתי כמידי יום, לבושה ומצוידת ליום לימודים, המטפלת החדשה מלווה אותי. נכנסתי לחצר בית הספר, חיכיתי קצת, חזרתי לחצר הורי, ואספתי מהמחסן את התיק שהכנתי יום קודם.</pre>
+[[יצאתי כמידי יום|https://www.youtube.com/watch?v=caPNrh82AvY]], לבושה ומצוידת ליום לימודים. המטפלת החדשה מלווה אותי. נכנסתי לחצר בית הספר, חיכיתי קצת, חזרתי לחצר הורי, ואספתי מהמחסן את התיק שהכנתי יום קודם.</pre>
 </div>
-<div created="20180105150125509" modified="20180106170930264" tags="לילי" title="לילי 02">
+<div created="20180105150125509" modified="20180112163937797" tags="לילי" title="לילי 02">
 <pre>[img[pictures/lily-2.jpg]]
 
 בתיק היו לי: 5 חטיפי אנרגיה, בקבוק מים, 2 חולצות ארוכות וחמות, 2 זוגות תחתונים, זוג מכנסי טרנינג, כלי רחצה, והרבה שטרות כסף שלקחתי ממכנסיו של אבי. הדרכון כבר היה עלי.</pre>
@@ -12917,6 +12940,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 <pre>[img[pictures/lily-3.jpg]]
 
 כל ארבעת הכיסים של המכנסיים של אבא שלי היו תמיד תפוחים מחבילות של שטרות כסף בצבעים שונים, ותמיד הוא היה תולה אותם בכניסה לחדר האמבטיה.</pre>
+</div>
+<div created="20180112171139383" modified="20180112171357707" tags="לילי" title="לילי 04">
+<pre>[img[pictures/lily-4.jpg]]
+
+את התכנית לברוח תכננתי במשך כשישה חודשים.</pre>
+</div>
+<div created="20180113204910549" modified="20180113205008534" tags="לילי" title="לילי 05">
+<pre>[img[pictures/lily-5.jpg]]
+
+את הרעיון קיבלתי מתכנית שראיתי יום אחד בטלוויזיה עם סבתי.</pre>
 </div>
 <div created="20170211163114823" modified="20170212133520340" title="לפתן חבושים">
 <pre>[img[pictures/KLL6V2vFdC26B5R4.jpg]]
@@ -13627,7 +13660,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20171219115813335" modified="20171220202601471" tags="[[אחיות חוץ]]" title="סטיב בושמי">
+<div created="20171219115813335" modified="20180107152513660" tags="[[אחיות חוץ]]" title="סטיב בושמי">
 <pre>[img[pictures/steve-buscemi.jpg]]
 
 !!![[יויו]]:
@@ -13636,7 +13669,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 הוא אחד השחקנים שאני הכי אוהב בכל לבי, והוא נשמה ואחות.
 
-הוא נולד ביום שישי ה-13 של דצמבר 1957, הוא היה כבאי במחלקת איטליה הקטנה של עיריית ניו יורק 4 שנים. הוא שיחק ב 157 סרטים, הוא הפיק 11 סרטים. הוא בפס הקול של שמונה סרטים, הוא כתב שלושה תסריטים, הוא שיחק ב 11 סרטים של [[אדם סנדלר|https://www.cinemablend.com/new/Quiz-Guess-Adam-Sandler-Movie-By-Steve-Buscemi-Character-70254.html]], שישה סרטים של [[האחים כהן|https://en.wikipedia.org/wiki/List_of_frequent_Coen_Brothers_collaborators]]. הוא היה מופתע כשהוצע לו התפקיד הראשי [[באימפריית הפשע|http://www.imdb.com/title/tt0979432/]] עליו זכה [[בגלובוס הזהב|https://www.youtube.com/watch?v=OGFJ6G7UmD8]]. הוא [[מת ב 20 סרטים|http://www.imdb.com/list/ls000805145/]], כולל את [[הסופרנוס]] אבל הוא הכי אהב למות [[בביג לובובסקי|https://www.youtube.com/watch?v=CWtby5WqHdM]] כולל סיבת המוות.
+הוא נולד ביום שישי ה-13 של דצמבר 1957, הוא היה כבאי במחלקת איטליה הקטנה של עיריית ניו יורק 4 שנים. הוא שיחק ב 157 סרטים, הוא הפיק 11 סרטים. הוא בפס הקול של 8 סרטים, הוא כתב 3תסריטים, הוא שיחק ב 11 סרטים של [[אדם סנדלר|https://www.cinemablend.com/new/Quiz-Guess-Adam-Sandler-Movie-By-Steve-Buscemi-Character-70254.html]], 6 סרטים של [[האחים כהן|https://en.wikipedia.org/wiki/List_of_frequent_Coen_Brothers_collaborators]]. הוא היה מופתע כשהוצע לו התפקיד הראשי [[באימפריית הפשע|http://www.imdb.com/title/tt0979432/]] עליו זכה [[בגלובוס הזהב|https://www.youtube.com/watch?v=OGFJ6G7UmD8]]. הוא [[מת ב 20 סרטים|http://www.imdb.com/list/ls000805145/]], כולל את [[הסופרנוס]] אבל הוא הכי אהב למות [[בביג לובובסקי|https://www.youtube.com/watch?v=CWtby5WqHdM]] כולל סיבת המוות.
 
 אתם יכולים לקרוא [[פרטי טריוויה נוספים|http://m.imdb.com/name/nm0000114/trivia?ref_=m_nm_dyk_trv]] אודות האיש. [[הנה|https://www.youtube.com/watch?v=BqVrpFXXdB0]] ראיון משעשע כבונוס, ושיהיה סטיב המתוק חזק בריא ושמח.
 
@@ -15781,6 +15814,13 @@ Fapina''
 * מבשלים על אש נמוכה ובודקים מידי פעם את מצב המים - מוסיפים רקלגובה האורז ולא יותר עד עשרים דקות לפני הסוף ובעשרים הדקות האחרונות מבשלים עד שהמים מתכלים.
 
 </pre>
+</div>
+<div created="20180107163950358" modified="20180114152729887" tags="[[סיפורים אמיתיים]]" title="תהפוכת">
+<pre>[img[pictures/tahapochet.jpg]]
+
+!!![[יויו]]:
+
+[[אנג'ליק]] המתוקה נראתה לי יפהפיה ברגע שראיתי אותה, אבל הייתי בטוח שיש לה עניינים עם [[אלפרד]], מה שהתברר כלא נכון לאחר שציננתי פוטנציאל להתלהבות מבעוד מועד. בתקופה שהיא נתפסה על [[הסופרנוס]] היא השפיעה על כולנו, ואת פרק הסיום ראינו יחד. ככה הזמן עבר עד שיומיים לפני הארוחה היא באה איתי לשוק ובדרך בגינה הרגשתי שבשל הרגע. אספתי אותה אלי כאביר, הבטתי בה, ראיתי את מבטה המחייך ונישקתי אותה ארוכות והיא אהובתי. </pre>
 </div>
 <div created="20170401223255295" modified="20170608165748598" tags="[[אחות כהן]]" title="תומר">
 <pre>[img[pictures/tomer.jpg]]
