--- a/index.html
+++ b/index.html
@@ -449,6 +449,8 @@ Error message and password prompt
 
 <li>דיוויד בואי</li>
 
+<li>דיוויד ביירן</li>
+
 <li>דיוויד צ'ייס</li>
 
 <li>דיור מוגז</li>
@@ -8832,10 +8834,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20180104165802193" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20180123173406513" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20180111161040502" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20180123173408488" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8844,7 +8846,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="גלגולים [[לילי 05]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[דיוויד ביירן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8864,7 +8866,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180112092301896" title="$:/temp/search">
+<div created="20161023184814872" modified="20180123164832572" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11040,6 +11042,15 @@ Is where I want to be
 
 
 </pre>
+</div>
+<div created="20180123164835249" modified="20180123180458887" tags="[[אחיות חוץ]]" title="דיוויד ביירן">
+<pre>[img[pictures/david-byrne.jpg]]
+
+!!![[יויו]]:
+
+[[תראו אותו|https://www.youtube.com/watch?v=hpPYKJAnwUo]], כבר לא ילד, אבל [[אותו הילד|https://www.youtube.com/watch?v=av3j4WStj2A]].
+
+[[דיוויד ביירן|http://davidbyrne.com/]]</pre>
 </div>
 <div created="20170829174937405" modified="20180107151613816" tags="[[אחיות חוץ]] הסופרנוס" title="דיוויד צ'ייס">
 <pre>[img[pictures/david-chase.jpg]]
