--- a/index.html
+++ b/index.html
@@ -351,6 +351,8 @@ Error message and password prompt
 
 <li>אני מחנה</li>
 
+<li>אני רוצה להתנצל</li>
+
 <li>אספרגוס</li>
 
 <li>אפייה</li>
@@ -714,6 +716,12 @@ Error message and password prompt
 <li>לילי 04</li>
 
 <li>לילי 05</li>
+
+<li>לילי 06</li>
+
+<li>לילי 07</li>
+
+<li>לילי 08</li>
 
 <li>לפתן חבושים</li>
 
@@ -8834,10 +8842,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20180123173406513" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20180125172428863" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20180123173408488" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20180125172431408" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8846,7 +8854,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[דיוויד ביירן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[לילי 08]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8866,7 +8874,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180123164832572" title="$:/temp/search">
+<div created="20161023184814872" modified="20180126110304873" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9648,7 +9656,7 @@ well,
 
 את הצנוברים הקלויים מפזרים מעל, ואפשר לפזר גם עשבי תיבול קצוצים.</pre>
 </div>
-<div created="20170423214419764" modified="20170817163350381" tags="[[קופים ממונעים]]" title="אחות כהן">
+<div created="20170423214419764" modified="20180125170104015" tags="[[קופים ממונעים]] [[אני רוצה להתנצל]]" title="אחות כהן">
 <pre>[img[pictures/achot-coen.jpg]]
 
 [[שלום ואהבה|imagine]].
@@ -9791,7 +9799,7 @@ well,
 
 &lt;&lt;list-links filter:&quot;[tag[אירי וגורה]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20170601134808349" modified="20170601162616966" title="אירי טוענת">
+<div created="20170601134808349" modified="20180125171838936" tags="[[אירי וגורה]]" title="אירי טוענת">
 <pre>[img[pictures/iri-toenet.jpg]]
 
 !!![[גורה]]:
@@ -9839,7 +9847,7 @@ well,
 
 ביתה הבכורה של [[ז'נבייב]]. היא ילידת 1995, ובקרוב תתחיל ללמוד פסיכולוגיה. בינתיים היא ממלצרת [[בקוסקוס|הקוסקוס]].</pre>
 </div>
-<div created="20170328195137638" modified="20171029224149615" tags="[[אחות כהן]] [[ילדים חד הוריים]]" title="אלפרד">
+<div created="20170328195137638" modified="20180125170035408" tags="[[אחות כהן]] [[ילדים חד הוריים]] [[אני רוצה להתנצל]]" title="אלפרד">
 <pre>[img[pictures/alfred.jpg]]
 
 !!![[גורה]]:
@@ -9938,6 +9946,15 @@ well,
 
 
 </pre>
+</div>
+<div created="20180124170832431" modified="20180125173101110" tags="" title="אני רוצה להתנצל">
+<pre>[img[pictures/ani-roza.jpg]]
+
+!!![[גורה]]:
+
+אחת ולתמיד אני רוצה להנתצל בשם כל ההתנצלויות על התנהגותי הלא אחידה בין חמודה לכועסת,  מגעילה ומתוסבכת, צועקת ובועטת. בין מרוצה למתוסכלת מתנצלת, בפני  [[דיוויד ביירן]] על שלא מצליחה לצייר אותו (לא רק), ובפני [[דןדן|https://www.youtube.com/watch?v=1MV1a-UcLHc]] שכל כך אהבתי. את כולם אוהבת.
+
+&lt;&lt;list-links filter:&quot;[tag[אני רוצה להתנצל]]&quot;&gt;&gt;</pre>
 </div>
 <div created="20170407125610504" modified="20170412203453076" tags="[[מתכוני ארוחת הכריסמס]]" title="אספרגוס">
 <pre>[img[pictures/asparagus.jpg]]
@@ -10890,7 +10907,7 @@ Is where I want to be
 סוף
 </pre>
 </div>
-<div created="20170401203113923" modified="20170608171008453" tags="[[משפחת באומן]]" title="גיגי">
+<div created="20170401203113923" modified="20180125171935940" tags="[[משפחת באומן]] [[אני רוצה להתנצל]]" title="גיגי">
 <pre>[img[pictures/gigi.jpg]]
 
 !!![[יויו]]:
@@ -11043,14 +11060,14 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20180123164835249" modified="20180123180458887" tags="[[אחיות חוץ]]" title="דיוויד ביירן">
+<div created="20180123164835249" modified="20180124105353091" tags="[[אחיות חוץ]]" title="דיוויד ביירן">
 <pre>[img[pictures/david-byrne.jpg]]
 
 !!![[יויו]]:
 
 [[תראו אותו|https://www.youtube.com/watch?v=hpPYKJAnwUo]], כבר לא ילד, אבל [[אותו הילד|https://www.youtube.com/watch?v=av3j4WStj2A]].
 
-[[דיוויד ביירן|http://davidbyrne.com/]]</pre>
+זה [[דיוויד ביירן|http://davidbyrne.com/]].</pre>
 </div>
 <div created="20170829174937405" modified="20180107151613816" tags="[[אחיות חוץ]] הסופרנוס" title="דיוויד צ'ייס">
 <pre>[img[pictures/david-chase.jpg]]
@@ -11450,7 +11467,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 ובזאת תמו דברינו לערב זה.
 </pre>
 </div>
-<div created="20170325162001136" modified="20171029224226495" tags="[[סיפורים אמיתיים]] [[דןדן נסע]]" title="הכתיבה">
+<div created="20170325162001136" modified="20180125165955800" tags="[[סיפורים אמיתיים]] [[דןדן נסע]] [[אני רוצה להתנצל]]" title="הכתיבה">
 <pre>[img[pictures/dAslRkCtpSF1J4AA.jpg]]
 
 !!![[גורה]]:
@@ -12088,7 +12105,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
  
 </pre>
 </div>
-<div created="20170522202441678" modified="20171029224707747" tags="[[אחות כהן]] [[נאמני הגנזך]]" title="יויו וגורה">
+<div created="20170522202441678" modified="20180125165822572" tags="[[אחות כהן]] [[נאמני הגנזך]] [[אני רוצה להתנצל]]" title="יויו וגורה">
 <pre>[img[pictures/yoyo-ve-gura.jpg]]
 
 !!![[גורה]]:
@@ -12918,7 +12935,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 וזו התמונה שמככבת באתר [[דובונאז' אלסטיק|http://coensisters.org/doobonage.html]].</pre>
 </div>
-<div created="20171219223133813" modified="20180112171613823" tags="[[מטא בדיון]]" title="לילי">
+<div created="20171219223133813" modified="20180125165750277" tags="[[מטא בדיון]]" title="לילי">
 <pre>[img[pictures/lily.jpg]]
 
 
@@ -12961,6 +12978,28 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 <pre>[img[pictures/lily-5.jpg]]
 
 את הרעיון קיבלתי מתכנית שראיתי יום אחד בטלוויזיה עם סבתי.</pre>
+</div>
+<div created="20180125182319734" modified="20180126104611449" tags="לילי" title="לילי 06">
+<pre>[img[pictures/lily-6.jpg]]
+
+בהתחלה קראתי מידע שיכול לעזור לי, עברתי על פני מקומות בעולם עד שהחלטתי שאחפש לי אימא בפריז, איסלנד או מכסיקו.</pre>
+</div>
+<div created="20180126105633010" modified="20180126110336361" tags="לילי" title="לילי 07">
+<pre>[img[pictures/lily-7.jpg]]
+
+
+את הטיסה קבעתי לשעות הבוקר, כך שבשעה בה אני אמורה לסיים את הלימודים כבר אהיה עם אדל. קבעתי עם נהג מונית אתו הסתמסתי כמה ימים קודם – בשם אמי, שבשמה גם כתבתי פתק שנועד לו ופתק אותו ייתן הנהג [[לנטע|נטע]].
+</pre>
+</div>
+<div created="20180126141443234" modified="20180126141925180" tags="לילי" title="לילי 08">
+<pre>
+[img[pictures/lily-8.jpg]]
+בשדה התעופה פגשנו את [[נטע]], אישה נחמדה, שהכרתי דרך אתר להורים שמחפשים מלווה לטיסות לילדים. גם לה כתבתי בשם הורי העסוקים. נהג המונית נתן לה את הפתק בו היה כתוב:
+
+נטע שלום רב,
+לא הספקנו להמיר כסף, נודה לך אם תוכלי לעשות זאת עבורנו
+וכן מודים לך על הכל, נסיעה טובה. אנו בטוחים כי תמצאי את לילי שלנו ילדה אחראית ונוחה.
+</pre>
 </div>
 <div created="20170211163114823" modified="20170212133520340" title="לפתן חבושים">
 <pre>[img[pictures/KLL6V2vFdC26B5R4.jpg]]
@@ -13555,7 +13594,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20171026185459428" modified="20171101162716404" tags="[[משפחת באומן]]" title="נסענו לאזכרה של אימא">
+<div created="20171026185459428" modified="20180125170644664" tags="[[משפחת באומן]] [[אני רוצה להתנצל]]" title="נסענו לאזכרה של אימא">
 <pre>[img[pictures/haazkara-shel-ima.jpg]] 
 
 !!![[גורה]]:
@@ -14321,7 +14360,7 @@ __אופן ההכנה:__
 
 </pre>
 </div>
-<div created="20170601232601606" modified="20170802204424275" tags="[[אחות כהן]] [[נאמני הגנזך]]" title="עם יויו באמסטרדם">
+<div created="20170601232601606" modified="20180125165934737" tags="[[אחות כהן]] [[נאמני הגנזך]] [[אני רוצה להתנצל]]" title="עם יויו באמסטרדם">
 <pre>[img[pictures/amsterdam-im-yoyo.jpg]]
 
 !!![[גורה]]:
