--- a/index.html
+++ b/index.html
@@ -723,6 +723,10 @@ Error message and password prompt
 
 <li>לילי 08</li>
 
+<li>לילי 09</li>
+
+<li>לילי 10</li>
+
 <li>לפתן חבושים</li>
 
 <li>לצייר גרפיטי וירטואלי במִיצְפֶּרֶש</li>
@@ -8854,7 +8858,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[לילי 08]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[לילי 10]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12992,14 +12996,27 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 </pre>
 </div>
 <div created="20180126141443234" modified="20180126141925180" tags="לילי" title="לילי 08">
-<pre>
-[img[pictures/lily-8.jpg]]
+<pre>[img[pictures/lily-8.jpg]]
 בשדה התעופה פגשנו את [[נטע]], אישה נחמדה, שהכרתי דרך אתר להורים שמחפשים מלווה לטיסות לילדים. גם לה כתבתי בשם הורי העסוקים. נהג המונית נתן לה את הפתק בו היה כתוב:
 
 נטע שלום רב,
 לא הספקנו להמיר כסף, נודה לך אם תוכלי לעשות זאת עבורנו
 וכן מודים לך על הכל, נסיעה טובה. אנו בטוחים כי תמצאי את לילי שלנו ילדה אחראית ונוחה.
 </pre>
+</div>
+<div created="20180126160253354" modified="20180126160354529" tags="לילי" title="לילי 09">
+<pre>
+[img[pictures/lily-9.jpg]]
+
+
+כשהייתי בת ארבע ידעתי קרוא וכתוב, ובגיל חמש ידעתי לכתוב בכתב יד שנראה כשל אדם בוגר.
+</pre>
+</div>
+<div created="20180126161417831" modified="20180126161517054" tags="לילי" title="לילי 10">
+<pre>
+[img[pictures/lily-10.jpg]]
+
+במציאות נטע הייתה יפה ונעימה אפילו יותר מאשר בתמונות.</pre>
 </div>
 <div created="20170211163114823" modified="20170212133520340" title="לפתן חבושים">
 <pre>[img[pictures/KLL6V2vFdC26B5R4.jpg]]
