--- a/index.html
+++ b/index.html
@@ -8866,7 +8866,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="דליקטסן ארוחות [[ארוחת כריסמס]] [[המטבח על פי ז'נבייב]] [[המטבח של הנחלה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[אווה כהן]] אירי [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8886,7 +8886,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180201142453547" title="$:/temp/search">
+<div created="20161023184814872" modified="20180201220232208" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9251,7 +9251,7 @@ well,
 
 </pre>
 </div>
-<div created="20161215192348716" modified="20180130192254671" tags="[[אחות כהן]] אמהות" title="אווה כהן">
+<div created="20161215192348716" modified="20180201220644711" tags="[[אחות כהן]] אמהות" title="אווה כהן">
 <pre>[img[pictures/7h68QEIPyKEHEZ8B.jpg]]
 
 
@@ -9267,7 +9267,8 @@ well,
 
 קצרה היריעה מלספר על אווה, מה גם שהיא עצמה כתבה לא מעט בגנזך.
 
-לאחרונה אירי, אווה ואני עובדות יחד על [[אימא, סבתא ואני]], סיפורים מאת דנה הבובה, על [[חייה עם איריס|כשהם ישנים]], ביתה של אווה ואווה.</pre>
+לאחרונה אירי, אווה ואני עובדות יחד על [[אימא, סבתא ואני]], סיפורים מאת דנה הבובה, על [[חייה עם איריס|כשהם ישנים]], ביתה של אווה ואווה.
+</pre>
 </div>
 <div created="20170722121850671" modified="20170728185508522" tags="[[הסיפור על גורה]]" title="אווה מספרת  01">
 <pre>[img[pictures/hasipoor-1.jpg]]
@@ -9668,7 +9669,7 @@ well,
 
 את הצנוברים הקלויים מפזרים מעל, ואפשר לפזר גם עשבי תיבול קצוצים.</pre>
 </div>
-<div created="20170423214419764" modified="20180125170104015" tags="[[קופים ממונעים]] [[אני רוצה להתנצל]]" title="אחות כהן">
+<div created="20170423214419764" modified="20180201220243556" tags="[[קופים ממונעים]] [[אני רוצה להתנצל]]" title="אחות כהן">
 <pre>[img[pictures/achot-coen.jpg]]
 
 [[שלום ואהבה|imagine]].
@@ -9770,7 +9771,7 @@ well,
 
 זאת דנה. והיא כתבה את הסיפורים הללו לפני.</pre>
 </div>
-<div created="20161206200127567" modified="20170806161148460" tags="[[אחות כהן]]" title="אירי">
+<div created="20161206200127567" modified="20180201220557625" tags="[[אחות כהן]]" title="אירי">
 <pre>[img[pictures/iri.jpg]]
 
 !!![[אלפרד]]:
