עמוק באדמה, אלן בול, לילי 12

--- a/index.html
+++ b/index.html
@@ -339,6 +339,8 @@ Error message and password prompt
 
 <li>אלכסנדרה</li>
 
+<li>אלן בול</li>
+
 <li>אלפרד</li>
 
 <li>אמהות</li>
@@ -733,6 +735,8 @@ Error message and password prompt
 
 <li>לילי 11</li>
 
+<li>לילי 12</li>
+
 <li>לפתן חבושים</li>
 
 <li>לצייר גרפיטי וירטואלי במִיצְפֶּרֶש</li>
@@ -886,6 +890,8 @@ Error message and password prompt
 <li>עם הפנים החוצה</li>
 
 <li>עם יויו באמסטרדם</li>
+
+<li>עמוק באדמה</li>
 
 <li>עמליה</li>
 
@@ -8872,7 +8878,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="קנלוני [[רוטב בשאמל]] נולדנו [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[לילי 12]] [[דיוויד צ'ייס]] [[אלן בול]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8892,7 +8898,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180212134341196" title="$:/temp/search">
+<div created="20161023184814872" modified="20180219163203252" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9865,6 +9871,16 @@ well,
 !!![[גורה]]:
 
 ביתה הבכורה של [[ז'נבייב]]. היא ילידת 1995, ובקרוב תתחיל ללמוד פסיכולוגיה. בינתיים היא ממלצרת [[בקוסקוס|הקוסקוס]].</pre>
+</div>
+<div created="20180218104549044" modified="20180219184851859" tags="[[אחיות חוץ]]" title="אלן בול">
+<pre>[img[pictures/alan-ball.jpg]]
+
+!!![[גורה]]:
+
+את הציור  עשיתי מהתמונה [[הזו|https://www.npr.org/sections/monkeysee/2012/08/25/160004142/alan-ball-on-leaving-true-blood-behind]] של [[אלן בול|http://www.imdb.com/name/nm0050332/?ref_=tt_ov_wr]].
+
+רק לפני שבועיים התוודעתי לקיומו, כי רק לפני שבועיים ראיתי את [[עמוק באדמה]] ממנה כל כך נהניתי, ויומיים אחרי שסיימתי את עמוק עברתי [[לדם אמיתי|http://www.imdb.com/title/tt0844441/?ref_=nm_ov_bio_lk3]] שהיא תענוג. [[ראו כמה ענוג הוא האיש|https://www.youtube.com/watch?v=hPhhF-NbUvw]].
+</pre>
 </div>
 <div created="20170328195137638" modified="20180125170035408" tags="[[אחות כהן]] [[ילדים חד הוריים]] [[אני רוצה להתנצל]]" title="אלפרד">
 <pre>[img[pictures/alfred.jpg]]
@@ -11108,7 +11124,7 @@ Is where I want to be
 
 זה [[דיוויד ביירן|http://davidbyrne.com/]].</pre>
 </div>
-<div created="20170829174937405" modified="20180107151613816" tags="[[אחיות חוץ]] הסופרנוס" title="דיוויד צ'ייס">
+<div created="20170829174937405" modified="20180219163159757" tags="[[אחיות חוץ]] הסופרנוס מוזיקה" title="דיוויד צ'ייס">
 <pre>[img[pictures/david-chase.jpg]]
 
 !!![[יויו]]:
@@ -13058,6 +13074,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 הטיסה עברה בקלות.</pre>
 </div>
+<div created="20180219183213816" modified="20180219183645035" tags="לילי" title="לילי 12">
+<pre>
+
+[img[pictures/lily-12.jpg]]
+
+בשדה התעופה באיסלנד חיכתה לי אדל – אותה בחרתי להיות לי לאם מאמצת, דרך סוכנות בינלאומית לאימוץ בינאישי. הכל בה מצא חן בעיני ובנוסף היה לה חתול.
+</pre>
+</div>
 <div created="20170211163114823" modified="20170212133520340" title="לפתן חבושים">
 <pre>[img[pictures/KLL6V2vFdC26B5R4.jpg]]
 
@@ -14474,6 +14498,22 @@ I wanna dedicate this song, Gone 'Til November...
 To all you ladies out there, crying all alone in your room
 And all you fellas, going down south...Not making it back...
 May the lord bless your soul, I love you girl</pre>
+</div>
+<div created="20180214165830427" modified="20180218101834723" tags="סדרות [[אחיות חוץ]]" title="עמוק באדמה">
+<pre>[img[pictures/six-feet-under.jpg]]
+
+!!![[גורה]]:
+
+בשבועיים האחרונים שתינו בצמא את [[עמוק באדמה|http://www.imdb.com/title/tt0248654/]].
+אם סדרות הן מה שעד לא מזמן היו ספרים עבורנו , אז עמוק באדמה הוא ספר מעולה שיש בו כל מה שאתה מבקש מספר להיות - חכם, יפה, מחכים, מצחיק, רגיש, מרגש, קיצוני, אמיתי למרות שהוא בדוי, עם דמויות שאתה אוהב והן הולכות איתך לפחות בימים בהם אתה קורא אותן, ואתה מתגעגע אליהן ורוצה לדעת קרה אחר כך, ובסוף אתה קצת מאט - כי אתה לא רוצה להיפרד מהן, וכשזה נגמר אתה ממשיך לקרוא עוד.
+
+מכל מי שמת בסדרה, הכי היה קשה לי עם המוות של [[הקדילאק|https://www.historicvehicle.org/five-famous-hearses/]] של [[קלייר|http://www.imdb.com/name/nm0024404/?ref_=tt_cl_t4]]. אחר כך זה צבט לראות אותה נוסעת במכונית קומפקטית ונטולת אופי או חן כמו אלה שעושים [[עכשיו|פעם]] אך יחד עם זה - נוסעת אל העתיד המבטיח [[בקליפ הסיום המרגיע|https://www.youtube.com/watch?v=f3-MJyRUkhs]] .
+
+אני ממש אוהבת את בני משפחת פישר ושאר הדמויות. הן מגולמות על ידי שחקנים מקסימים גם בהם התאהבתי. [[גם|https://www.youtube.com/watch?v=wYUJZSl3V4E]] התסריטאים נפלאים והבמאים והארט והצילום והעריכה המוש [[ואלן בול|אלן בול]]. תודה  ואהבה מיויו, אנג'ליק וממני.
+
+
+
+</pre>
 </div>
 <div created="20170728194609841" modified="20170729110319966" tags="[[שרלה לא הייתה אוהבת את זה]]" title="עמליה">
 <pre>[img[pictures/amalya.jpg]]
