--- a/index.html
+++ b/index.html
@@ -8878,7 +8878,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[לילי 12]] [[דיוויד צ'ייס]] [[אלן בול]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="מוזיקה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -13076,7 +13076,6 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 </div>
 <div created="20180219183213816" modified="20180219183645035" tags="לילי" title="לילי 12">
 <pre>
-
 [img[pictures/lily-12.jpg]]
 
 בשדה התעופה באיסלנד חיכתה לי אדל – אותה בחרתי להיות לי לאם מאמצת, דרך סוכנות בינלאומית לאימוץ בינאישי. הכל בה מצא חן בעיני ובנוסף היה לה חתול.
@@ -13240,12 +13239,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180205175902513" modified="20180209102914115" tags="" title="מוזיקה">
+<div created="20180205175902513" modified="20180219190242361" tags="" title="מוזיקה">
 <pre>[img[pictures/music.jpg]]
 
 !!![[אירי וגורה]]:
 
-בתוך כדי הניסיונות הבלתי פוסקים שלנו להבין את העולם הזה בו אנו חיים. איך, מאיפה, לאן ועד מתי, אנו מודות על המוסיקה, שללב היא חודרת.
+בתוך כדי הניסיונות הבלתי פוסקים שלנו להבין את העולם הזה בו אנו חיים. איך, מאיפה, לאן ועד מתי, אנו מודות על המוסיקה, [[שללב היא חודרת|https://www.youtube.com/watch?v=lx9-zAZRh1s]].
 
 
 
